# DataEscrowSystem

./: .gitignore  CMakeLists.txt  README.md  check_quote_provider.cmake  tls_12341_monitor.sh  tls_12341_traffic.pcap  tls_12341_traffic_openssl1.pcap  tls_12341_traffic_openssl3.pcap  truffle-config.js  usage.sh
Dapp/: package-lock.json  package.json
Dapp/src/: App.jsx
attested_tls/: CMakeLists.txt  Makefile
attested_tls/SymCrypt/lib/: libsymcrypt.so.103
attested_tls/SymCrypt/lib/.debug/: libsymcrypt.so.103.0.1
attested_tls/SymCrypt/lib/pkgconfig/: symcrypt.pc
attested_tls/common/: common.h  openssl_utility.cpp  openssl_utility.h  tls_server_enc_mrenclave.h  tls_server_enc_mrenclave2.h
attested_tls/non_enc_client/: CMakeLists.txt  client.cpp  mainclient.cpp  recieveEncryptedData.cpp
attested_tls/non_enc_request/: CMakeLists.txt  encryptdata.cpp  main.cpp  request.cpp  server.crt  server.csr
attested_tls/server/: tls_server.edl
attested_tls/server/enc/: CMakeLists.txt  Makefile  gen_shares.cpp  gen_shares.h  mbedtls_server.cpp  openssl_server.cpp
attested_tls/server/host/: CMakeLists.txt  host.cpp
contracts/: DataEscrow.sol
migrations/: 1_initial_migration.js
